fix startup script for jvm 16